--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -60,11 +60,28 @@
   left: 50%;
   transform: translateX(-50%);
 }
+@mixin centerY(){
+  top: 50%;
+  transform: translateY(-50%);
+}
+@mixin center(){
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
 
 @mixin flexjc($jc){
   display: flex;
   justify-content: $jc;
 }
+
+@mixin resBtn(){
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
 
 
 $bd-01 : rgba(0, 0, 0, .1);
