--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -66,6 +66,9 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1;
   overflow-x: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 ol, ul {
@@ -405,6 +408,7 @@ header {
   left: 0;
   border-top: 2px solid rgba(255, 255, 255, 0.4);
   border-left: 2px solid rgba(255, 255, 255, 0.4);
+  pointer-events: none;
 }
 .index-section01--videoControls--OpenWrapper .index-section01--openBtnWrp .index-section01--openBtnSide:nth-child(3) {
   width: 9px;
@@ -413,6 +417,7 @@ header {
   right: 0;
   border-top: 2px solid rgba(255, 255, 255, 0.4);
   border-right: 2px solid rgba(255, 255, 255, 0.4);
+  pointer-events: none;
 }
 .index-section01--videoControls--OpenWrapper .index-section01--openBtnWrp .index-section01--openBtnSide:nth-child(4) {
   width: 9px;
@@ -421,6 +426,7 @@ header {
   right: 0;
   border-bottom: 2px solid rgba(255, 255, 255, 0.4);
   border-right: 2px solid rgba(255, 255, 255, 0.4);
+  pointer-events: none;
 }
 .index-section01--videoControls--OpenWrapper .index-section01--openBtnWrp .index-section01--openBtnSide:nth-child(5) {
   width: 9px;
@@ -429,6 +435,7 @@ header {
   left: 0;
   border-bottom: 2px solid rgba(255, 255, 255, 0.4);
   border-left: 2px solid rgba(255, 255, 255, 0.4);
+  pointer-events: none;
 }
 .index-section01--videoControls--OpenWrapper .index-section01--openBtnWrp:hover {
   transform: scale(1.1);
@@ -509,7 +516,7 @@ header {
 }
 .index-section01--videoControlsWrapper .index-section01--controls--videoRangeWrapper {
   width: 100%;
-  padding: 4% 2.5vw;
+  padding: 3% 2.5vw;
   height: 10px;
   position: relative;
   top: 0;
@@ -533,6 +540,7 @@ header {
   left: 0;
   width: 0%;
   border-top: 1px solid white;
+  transition: 0.1s;
 }
 .index-section01--videoControlsWrapper .index-section01--controls--videoRangeWrapper .index-section01--controls--rangeLow .index-section01--controls--rangeControl {
   position: absolute;
@@ -541,9 +549,9 @@ header {
   border-radius: 100%;
   background-color: wheat;
   top: -50%;
-  left: 20%;
-  transition: 0.2s;
+  transition: 0.1s;
   z-index: 999;
+  cursor: pointer;
 }
 .index-section01--videoControlsWrapper .index-section01--controls--videoRangeWrapper .index-section01--controls--rangeLow .index-section01--controls--rangeControl:hover {
   background-color: gray;
@@ -551,28 +559,31 @@ header {
 
 .index-section01--controls--closeBtn {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   background-color: gray;
   display: flex;
   overflow: hidden;
   align-items: center;
-  top: 50%;
-  left: 50%;
+  transform: scale(1);
+  transition: 0.1s;
 }
 .index-section01--controls--closeBtn button {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  background-color: transparent;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  pointer-events: all;
   display: flex;
   justify-content: center;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  pointer-events: all;
   align-items: center;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  opacity: 1;
+  transition: 0.25s;
 }
 .index-section01--controls--closeBtn button span {
   font-family: "jsThin";
@@ -581,11 +592,78 @@ header {
 }
 .index-section01--controls--closeBtn.hide {
   pointer-events: none;
-  width: 10px;
-  height: 10px;
+  transform: scale(0.2);
 }
 .index-section01--controls--closeBtn.hide button {
-  display: none;
+  opacity: 0;
+}
+
+.index-section01--controls--BtnWrapper {
+  width: 100%;
+  height: 30px;
+  position: relative;
+}
+.index-section01--controls--BtnWrapper .index-section01--controls--Btn {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+.index-section01--controls--BtnWrapper .index-section01--controls--Btn span {
+  position: absolute;
+  width: 40px;
+  border: 2px solid white;
+  background-color: white;
+  transform-origin: right;
+  transition: 0.3s;
+}
+.index-section01--controls--BtnWrapper .index-section01--controls--Btn.pause span:nth-child(1) {
+  transform: rotate(-20deg);
+}
+.index-section01--controls--BtnWrapper .index-section01--controls--Btn.pause span:nth-child(2) {
+  transform: rotate(20deg);
+}
+.index-section01--controls--BtnWrapper .index-section01--controls--Btn.play span:nth-child(1) {
+  transform: rotate(0deg);
+}
+.index-section01--controls--BtnWrapper .index-section01--controls--Btn.play span:nth-child(2) {
+  transform: rotate(0deg);
+}
+
+.index-section01--controls--Btn--mute {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 2.5vw;
+  overflow: hidden;
+}
+.index-section01--controls--Btn--mute .index-section01--controls--Btn--effect {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: -100%;
+  border: 1px solid white;
+  transition: 0.25s;
+}
+.index-section01--controls--Btn--mute .index-section01--controls--Btn--effect.mute {
+  left: 0;
+}
+.index-section01--controls--Btn--mute button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.index-section01--controls--Btn--mute button span {
+  text-transform: uppercase;
+  font-family: "jsLight";
+  font-size: 20px;
+  color: white;
 }
 
 .index-section-02 {
@@ -641,6 +719,7 @@ header {
   width: 100%;
   height: 0px;
   overflow: hidden;
+  transition: 0.3s;
 }
 .index-section02--textWrappers .index-section02--textWrapper .index-section02--content {
   width: 100%;
