--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -27,6 +27,10 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
   overflow-x: hidden;
+	-webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;	
+  user-select:none
 }
 ol, ul {
 	list-style: none;
