--- a/src/styles/layout/_Index.scss
+++ b/src/styles/layout/_Index.scss
@@ -12,6 +12,31 @@
   width: 100vw;
   height: 100vh;
 }
+
+@mixin angle($po1,$po2,$po3,$px){
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border: 18px solid variables.$zzz04;
+  border-#{$po1}-color: transparent; 
+  border-#{$po2}-color: transparent; 
+  border-#{$po3}: none;
+  #{$po3}: $px;
+  
+  &.selected {
+    border-color: black;
+    border-#{$po1}-color: transparent; 
+    border-#{$po2}-color: transparent; 
+    border-#{$po3}: none;
+  }
+  &:hover {
+    border-color: black;
+    border-#{$po1}-color: transparent; 
+    border-#{$po2}-color: transparent; 
+    border-#{$po3}: none;
+  }
+
+} 
 @mixin border($po1,$po2){
   width: 9px;
   height: 9px;
@@ -450,14 +475,26 @@
   width: 100%;
   position: relative;
   h2 {
-    @include variables.jamsil(700, 25px);
-    text-transform: uppercase;
+    @include variables.textHide();
+
+  }
+
+  .index-section02--titleSpans{
+    width: 100%;
     margin: 70px 0;
-    letter-spacing: 1.5px;
-    word-spacing: 15px; 
-    position: relative;
-    display: inline-block;
-    @include variables.centerX();
+    text-align: center;
+    overflow: hidden;
+
+    span{
+      @include variables.jamsil(700, 25px);
+      text-transform: uppercase;
+      text-align: center;
+      display: inline-block;
+      transform: translateY(30px);
+      &.space {
+        width: 18px;
+      }
+    }
   }
 }
 
@@ -467,6 +504,8 @@
   justify-content: center;
   gap: 120px;
   align-items: flex-start;
+  position: relative;
+  z-index: 2;
 
   .index-section02--textWrapper {
     width: 220px;
@@ -481,6 +520,10 @@
       letter-spacing: 1.2px;
       line-height: 22px;
       margin-bottom: 15px;
+
+      &.show {
+        color: #000;
+      }
     }
 
     .index-section02--subWrapper {
@@ -488,8 +531,6 @@
       height: 0px;
       overflow: hidden;
       transition: .3s;
-      &.show {
-      }
     }
 
     .index-section02--content{
@@ -521,6 +562,13 @@
         @include variables.jamsil(400, 0);
         transition: 0.35s ease;
       }
+      &.open {
+        p{
+          opacity: 1;
+          transform: translateX(0);
+          color: variables.$zzz04;
+        }
+      }
     }
     .index-section02--icon {
       position: absolute;
@@ -551,7 +599,7 @@
   }
 
   .index-section02--textWrapper:hover {
-    .index-section02--subTitle{
+    .index-section02--subTitle {
       color: #000;
     }
     .index-section02--showText p{
@@ -559,6 +607,12 @@
       opacity: 1;
     }
     
+    .open p{
+      color: #000;
+    }
+
+
+
     .arrowOne{
       transform: translate(150%,-150%);    
     }
@@ -569,23 +623,89 @@
 }
 .index-section02--imagesWrapper {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  z-index: -1;
-  .index-section02--image{
-    position: absolute;
-    width: 260px;
-    height: 180px;
-    border: 1px solid #000;
-    background-color: rgba(0,0,255,.5);
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover
+  height: 32%;
+  margin-bottom: 8%;
+  display: flex;
+  justify-content: space-between;
+  // z-index: -1;
+  .index-section02--imageSlides{
+    display: flex;
+    align-items: end;
+    margin-right: 2.5vw;
+    gap: 10px;
+    .index-section02--imageSlide {
+      width: 100px;
+      height: 60px;
+      background-color: red;
+      .index-section02--imageCover{
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,.2);
+        transition: .2s;
+      }
+      &.selected{
+        .index-section02--imageCover{
+          background-color: rgba(0,0,0,0);
+        }
+      }
+      &:hover {
+        .index-section02--imageCover{
+          background-color: rgba(0,0,0,0);
+        }
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover
+      }
     }
+  }
+
+  .index-section02--imageLargeBoxWrapper {
+    height: 100%;
+    margin-left: 2.5vw;
+    display: flex;
+    align-items: end;
+
+    .index-section02--imageLargeBox {
+      width: 400px;
+      height: 100%;
+      overflow: hidden;
+
+      .index-section02--imageLarge{
+        width: 100%;
+        height: 100%;
+        background-color: blue;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover
+        }
+      }
+    }
+  }
+}
+
+.index-section02--animationControll {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  margin-left: 40px;
+  
+  .index-section02--top{
+    @include angle(left,right,top,-18px);
+  }
+  .index-section02--left{
+    @include angle(top,bottom,left,-18px);
+  }
+  .index-section02--right{
+    @include angle(top,bottom,right,-4px);
+  }
+  .index-section02--bottom{
+    @include angle(left,right,bottom,-4px);
   }
 }
 
