--- a/src/styles/abstracts/main.css
+++ b/src/styles/abstracts/main.css
@@ -834,14 +834,16 @@ header {
   gap: 10px;
 }
 .index-section02--imagesWrapper .index-section02--imageSlides .index-section02--imageSlide {
-  width: 100px;
-  height: 60px;
-  background-color: red;
+  position: relative;
+  width: 110px;
+  height: 70px;
 }
 .index-section02--imagesWrapper .index-section02--imageSlides .index-section02--imageSlide .index-section02--imageCover {
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
   transition: 0.2s;
 }
 .index-section02--imagesWrapper .index-section02--imageSlides .index-section02--imageSlide.selected .index-section02--imageCover {
@@ -870,7 +872,6 @@ header {
 .index-section02--imagesWrapper .index-section02--imageLargeBoxWrapper .index-section02--imageLargeBox .index-section02--imageLarge {
   width: 100%;
   height: 100%;
-  background-color: blue;
 }
 .index-section02--imagesWrapper .index-section02--imageLargeBoxWrapper .index-section02--imageLargeBox .index-section02--imageLarge img {
   width: 100%;
