--- a/src/styles/layout/_Index.scss
+++ b/src/styles/layout/_Index.scss
@@ -353,7 +353,7 @@
   align-items: center;
   
   transform: scale(1);
-  transition: .1s;
+  // transition: .1s;
   button {
     @include variables.flexjc(center);
     display: inline-block;
@@ -513,7 +513,10 @@
     border-radius: 20px;
     padding: 20px 15px;;
     cursor: pointer;
-
+    transition: .5s;
+    &.open{
+      border: 1px solid rgba(0,0,0,.5);
+    }
     .index-section02--subTitle{
       @include variables.jamsil(500, 13px);
       color: rgba(0,0,0,.5);
@@ -626,6 +629,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  padding: 0 2.5vw;
   height: 32%;
   margin-bottom: 8%;
   display: flex;
@@ -634,8 +638,8 @@
   .index-section02--imageSlides{
     display: flex;
     align-items: end;
-    margin-right: 2.5vw;
     gap: 10px;
+    width: 50%;
     .index-section02--imageSlide {
       position: relative;
       width: 110px;
@@ -668,16 +672,17 @@
 
   .index-section02--imageLargeBoxWrapper {
     height: 100%;
-    margin-left: 2.5vw;
+    width: 100%;
     display: flex;
     align-items: end;
 
     .index-section02--imageLargeBox {
-      width: 400px;
+      min-width: 400px;
       height: 100%;
       overflow: hidden;
-
+      position: relative;
       .index-section02--imageLarge{
+        position: absolute;
         width: 100%;
         height: 100%;
         img {
@@ -692,10 +697,16 @@
 
 .index-section02--animationControll {
   position: relative;
-  width: 50px;
-  height: 50px;
   margin-left: 40px;
-  
+  display: flex;
+  gap: 50px;
+  align-items: flex-end;
+  .index-section02--directions{
+    position: relative;
+    width: 50px;
+    height: 50px;
+  }
+
   .index-section02--top{
     @include angle(left,right,top,-18px);
   }
@@ -708,17 +719,65 @@
   .index-section02--bottom{
     @include angle(left,right,bottom,-4px);
   }
+
+  .index-section02--stateControl{
+    @include variables.jamsil(400, 15px);
+    min-width: 120px ;
+    .index-section02--duration {
+      width: 100%;
+      margin-bottom: 10px;
+      .index-section02-durationBox {
+        display: flex;
+        width: 100%;
+      }
+      input {
+        width: 100%;
+        height: 11px;
+        background: linear-gradient(to right, #FFE283 0%, #FFE283 50%, #ececec 50%, #ececec 100%);
+        border-radius: 2px;
+        
+        display: inline-block;
+        outline: none;
+        transition: background 450ms ease-in;
+        -webkit-appearance: none;
+        accent-color: #ffca1d;
+      }
+      span{
+        display: inline-block;
+      }
+    }
+    .index-section02--easeOption{
+      display: flex;
+      width: 100%;
+      gap: 10px;
+      select { 
+        width: 45%;
+        border-radius: 1px;
+        box-shadow: none;
+        @include variables.jamsil(300, 15px);
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+
+  }
 }
 
 .index-section-03{
   @extend %index-section;
+  height: auto;
 
 }
 .index-section03--wrapper {
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 0 10%;
   position: relative;
+  flex-direction: column;
+  display: flex;
+  align-items: end;
   .index-section03--reasonFirst,
   .index-section03--reasonFirst {
     @extend %index-FJcSbR
@@ -730,16 +789,15 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-
   .index-section03--whatIsAnimation {
-    width: 350px;
+    width: 400px;
     position: relative;
     .index-section03--whatIsAnimation-black,
     .index-section03--whatIsAnimation-gray {
       position: absolute;
       top: 0;
       left: 0;
-      p {
+      p,span {
         @include variables.jamsil(400, 20px);
         word-spacing: 6px;
         line-height: 29px;
@@ -750,6 +808,9 @@
     }
     .index-section03--whatIsAnimation-gray p{
       color: #6c6c6c;
+      span{
+        color: #6c6c6c;
+      }
     }
 
 
@@ -757,7 +818,7 @@
   }
   .index-section03--experienceAni {
     width: 750px;
-    height: 500px;
+    height: 450px;
     background-color: blue;
     opacity: 0.5;
   }
@@ -769,13 +830,14 @@
   justify-content: end;
   align-items: flex-end;
   width: 100%;
-
+  height: 50%;
+  margin-bottom: 1%;
   .index-section03--titleWrapper {
     position: absolute;
     left: 0;
-    top: -130px;
+    top: -90px;
     .index-section03--titles p{
-      padding-bottom:  45px;
+      padding-bottom:  30px;
       @include variables.jamsil(800, 85px);
     }
   }
