--- a/src/styles/layout/_tricks.scss
+++ b/src/styles/layout/_tricks.scss
@@ -45,7 +45,6 @@
   animation: showTexts .7s ease-in forwards;
 }
 
-
 .tricksList{
   padding-top: 6vh;
 }
@@ -53,15 +52,20 @@
   width: 100%;
   padding:  0 2.5vw;
 }
-.tricksGrid {
+.tricks-list--row {
   width: 100%;
-  height: 100%;
+  height: 200px;
   display: flex;
-  flex-wrap: wrap;
+  border-bottom: 1px solid variables.$zzz04;
+  overflow: hidden;
+  transition: 0.25s ease-in-out;
+  &.close {
+    height: 0px;
+  }
 }
 
 .tricks-list--entrance{
-  width: 100%;
+  width: 40%;
   height: 100%;
   padding: 1% 2%;
   @include variables.flexjc(space-between);
@@ -93,12 +97,12 @@
 }
 
 .trickWrapper{
-  width: 100%;
+  width: 20%;
   height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-top: 1px solid black;
+  margin: 3 px 0;
 }
 
 .trick {
@@ -111,7 +115,7 @@
 
   .trick-content--Wrapper {
     position: absolute;
-    bottom: -55px;
+    bottom: -80px;
     overflow: hidden;
     width: 100%;
     padding: 2% 3%;
@@ -131,18 +135,26 @@
       @include variables.jamsil(700, 12px);
       align-items: center;
       margin-bottom: 4px;
+
       .trick-content--right{
         @include variables.flexjc(space-between);
         align-items: center;
         button {
           outline: none;
-          border: none;
           background: transparent;
+          border: none;
           text-transform: uppercase;
           padding: 0;
           @include variables.jamsil(700, 12px);
           cursor: pointer;
           transition: .25s;
+        }
+      }
+
+      .trick-content--skills{
+          
+        span{
+          @include variables.jamsil(700, 11px);
         }
       }
     }
@@ -165,22 +177,77 @@
   }
 
   &:hover .trick-video--Wrapper {
+    width: 100%;
     height: 100%;
+    .trick-video--video {
+      width: 98%;
+      height: 98%;
+      border-radius: 5px;
+    }
+    video {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
 .trick-video--Wrapper {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   transition: 1s;
+
+  @include variables.flexjc(center);
+  align-items: center;
 }
 .trick-video--video {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: red;
+  width: 94%;
+  height: 96%;
+
+  border-radius: 20px;
+  overflow: hidden;
+  transition: .25s;
+  video {
+    width: 130%;
+    height: 130%;
+    object-fit: cover;
+    
+    transition: .25s;
+  }
 }
 
+.trick-showMore {
+  width: 100vw;
+  padding: 2em;
+}
 
+.trick-showMore-BtnBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  button {
+    width: 120px;
+    height: 40px;
+    @include variables.resBtn();
+    border-radius: 5px;
+    border: 1px solid variables.$zzz04;
+    transition: .4s;
+
+    span{
+      transition: .4s;
+      @include variables.jamsil(300,1.3em);
+      color: #c9c9c9;
+    }
+    &:hover{
+      border: 1px solid variables.$zzz08;
+      span {
+        color:#000000;
+      }
+    }
+  }
+
+  .trick-showMore--end {
+    @include variables.jamsil(300,1.5em);
+  }
+}
