--- a/src/styles/abstracts/main.scss
+++ b/src/styles/abstracts/main.scss
@@ -5,6 +5,7 @@
 @use '../base/reset';
 @use '../base/preset';
 
+@use '../components/animation';
 @use '../components/button';
 @use '../components/title';
 
