--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -19,6 +19,7 @@ footer {
   width: 100%;
   height: 100vh;
   clip-path: polygon(0 0, 0 0, 100% 0, 100% 0);
+  background-color: red;
 }
 
 .footer-infomation--Wrapper {
