--- a/src/styles/layout/_tricksDetail.scss
+++ b/src/styles/layout/_tricksDetail.scss
@@ -1,2 +1,40 @@
 @use '../abstracts/variables';
 @use "sass:math";
+
+.trickDetail{
+    width: 100%;
+    height: 100vh;
+    padding-top: 5vh;
+}
+
+.trickDetail--wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.trickDetail-content--left{
+    width: 50%;
+
+    .trickDetail-content--title{
+        @include variables.jamsil(400, 2em);
+        margin-bottom: .5em;
+    }
+
+    .trickDetail-content--skills {
+        display: flex;
+        gap: 15px;
+        span{
+            @include variables.jamsil(300, 1em)
+        }
+    }
+}
+
+
+
+.trickDetail-content--right{
+    width:  50%;
+    height: 100%;
+    background-color: chocolate;
+}
